# gazebo-ros-setup

./: .env  .env.example  .gitignore  Dockerfile  README.md  container_p10k.zsh  container_zshrc  core.Dockerfile  core_entrypoint.sh  core_zshrc  docker-compose.nvidia.yml  docker-compose.server.yml  docker-compose.yml
.github/workflows/: pages.yml  publish.yml
consumer-template/: Dockerfile  README.md  container_zshrc
core_ws/: README.md
docs/: _config.yml  architecture.md  core-stack.md  desktop-full-contents.md  example-camera-world.md  example-turtlebot4.md  hand_controller_fix.md  headless-rendering.md  index.md  macos-setup.md  project-coordination.md  quickstart.md  repo-tour.md  ros2-gazebo-integration.md  server-client.md  topics.md  tutorial-swappable-sim.md  writing-your-own-nodes.md
examples/: README.md
examples/camera_world/: README.md
examples/camera_world/launch/: camera_demo.launch.py
examples/camera_world/src/camera_subscriber/: package.xml  setup.py
examples/camera_world/src/camera_subscriber/camera_subscriber/: image_consumer.py
examples/consumer-camera/: Dockerfile  README.md
examples/consumer-camera/src/consumer_camera/: package.xml  setup.cfg  setup.py
examples/consumer-camera/src/consumer_camera/consumer_camera/: brightness_driver.py
examples/perception-demo/: Dockerfile  README.md  docker-compose.yml
examples/turtlebot4/: Dockerfile  README.md  docker-compose.yml
shell/: ros-shortcuts.sh
team/: README.md  project-coordination.md  ros2-gazebo-integration.md
workspace/: README.md
(+13 files in other folders)
