<?xml version="1.0"?>
<package format="3">
  <name>camera_subscriber</name>
  <version>0.1.0</version>
  <description>Subscribes to a bridged Gazebo camera and logs frame stats.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
