<?xml version="1.0"?>
<package format="3">
  <name>consumer_camera</name>
  <version>0.1.0</version>
  <description>Example consumer: subscribes to the TB4 camera and publishes cmd_vel based on image mean brightness.</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
